# mojxml2geojson-1

./: README.md  setup.cfg
.cspell/: custom-dictionary-workspace.txt
src/package/: MojXMLtoGeoJSON.py
